--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,15 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
   <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic,400italic,600italic" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
+
 
 </head>
 <body>
 <div class="container-fluid">
-
 	
 	 <div class="header">
 		Consumer Reviews Dashboard
@@ -33,11 +33,9 @@
 
    <div class="mainContainer">
       <div class="chosenTitle">
-          <div class="bookCover"> COVER </div>
+          <div class="bookCover"></div>
           <div class="bookDescription"> DESCRIPTION</div>
       </div>
-
-     <i class="fa fa-spinner fa-pulse fa-3x fa-fw margin-bottom" ></i>
 
     <div role="tabpanel">
 
