--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -66,15 +66,17 @@
 			</div>
   </div>
   <div role="tabpanel" aria-labelledby="themesTab" class="tab-pane fade" id="themes">
-  	<div id="monkey_keywords">
+  	<div id="monkey_themes">
   			
   	</div>
-  	<div id="monkey_themes"></div>
-  		<canvas id="themesChart" width="1000px" height="600px"></canvas>
+  	<div id="monkey_keywords"></div>
+  		<h1>MonkeyLearn's Keyword Analysis</h1>
+      <canvas id="keywordsChart" width="1000px" height="600px"></canvas>
   	</div>
   <div role="tabpanel" aria-labelledby="shelvesTab" class="tab-pane fade" id="shelves">
-
-
+    <div id="shelves_chart_box"></div>
+      <canvas id="shelvesChart" width="1000px" height="600px"></canvas>
+    </div>
   </div>
 </div>
 
