--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 <body>
 <div class="container-fluid">
 		 <div class="header">
+      <img class="logo" src="http://i.imgur.com/Qy4HkdW.png" />
     <!--     <div class="logo"><img src="../../../app/assets/images/rh.png"></div> -->
 		    <div class="title">Reader Reviews Dashboard</div>
         <div class="findISBN">
