--- a/app/views/reviews/welcome.html.erb
+++ b/app/views/reviews/welcome.html.erb
@@ -1,6 +1,6 @@
 <div class="welcomeBox">
 	<h1>Willkommen. Aloha. Hola Bella. Sup. </h1>
-	<h2>Soon you'll be scraping reader reviews from Goodreads and Amazon ... as might one known as a 'pro' or 'badass' ...  and performing all kinds of funky analysis.</h2>
+	<h2>Soon you'll be scraping reader reviews from Goodreads and Amazon like a "pro" or "BAMF" (wot wot) and performing all kinds of funky analysis.</h2>
 	<h3>Analysis includes</h3>
 	<ol>
 		<li><h4>Schweet Word Clouds</h4></li>
@@ -10,4 +10,4 @@
 	<h1>To begin, search for a title , by author, keyword, or isbn above.</h1>
  </div>
 
- <i class="fa fa-arrow-up fa-4x fa-rotate-90 blink_me fa-inverse"></i>
+ <i class="fa fa-arrow-up fa-3x fa-rotate-90 blink_me fa-inverse"></i>
