--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -117,8 +117,9 @@ color:white;
 }
 
 .logo {
-	height: 30px;
-	width: 30px;
+  height: 30px;
+  width: 60px;
+  margin: 5px;
 }
 
 .login {
@@ -302,7 +303,7 @@ color:white;
 }
 
 .fa-arrow-up {
-	  top: 20px;
+	top: 10px;
   	right: 370px;
 	position:absolute;
 	display: block;
