--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -117,9 +117,10 @@ color:white;
 }
 
 .logo {
-  height: 30px;
-  width: 60px;
-  margin: 5px;
+	height: 40px;
+  width: 50px;
+  margin-bottom: 10px;
+  margin-right: 5px;
 }
 
 .login {
