--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -168,12 +168,7 @@ color:white;
 .chosenTitle {
 	position: relative;
 	height: auto;
-/*	display: none;*/
-	padding: 20px;
-	-webkit-transition: all 1s ease-in-out;
- 	 -moz-transition: all 1s ease-in-out;
-  	-o-transition: all 1s ease-in-out;
-	  transition: all 1s ease-in-out;
+  	padding-bottom: 30px;
 }
 
 .chosenTitle.visible {
