--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -86,7 +86,9 @@ h1 {
 
  .title {
  	display: inline-block;
- 	font-size: 25px
+ 	font-size: 25px;
+ 	margin-left: 95px;
+ 	  margin-top: 4px;
  }
 
 .wordCloudsBox {
@@ -117,10 +119,13 @@ color:white;
 }
 
 .logo {
-	height: 40px;
-  width: 50px;
+  height: 80px;
+  width: 85px;
+  position: absolute;
+  top: 5px;
   margin-bottom: 10px;
   margin-right: 5px;
+  padding-bottom: 20px;
 }
 
 .login {
