--- a/app/views/reviews/welcome.html.erb
+++ b/app/views/reviews/welcome.html.erb
@@ -1,13 +1,12 @@
 <div class="welcomeBox">
-	<h1>Willkommen. Aloha. Hola Bella. Sup. </h1>
-	<h2>Soon you'll be scraping reader reviews from Goodreads and Amazon like a "pro" or "BAMF" (wot wot) and performing all kinds of funky analysis.</h2>
-	<h3>Analysis includes</h3>
-	<ol>
+	<h1>Willkommen. Aloha. Bonjour. Sup. </h1>
+	<h2>Soon you'll be scraping reader reviews from Goodreads and Amazon like a "pro" or even "BAMF" (as the youths say) and performing all kinds of funky analysis, like these:</h2><br>
+	<ul>
 		<li><h4>Schweet Word Clouds</h4></li>
 		<li><h4>Mindblowing keyword extraction</h4></li>
 		<li><h4>Slam-dunkering user shelves roll-ups</h4></li>
-	</ol>
-	<h1>To begin, search for a title , by author, keyword, or isbn above.</h1>
+	</ul>
+	<h2>To begin, search for a title , by author, keyword, or isbn above.</h2>
  </div>
 
  <i class="fa fa-arrow-up fa-3x fa-rotate-90 blink_me fa-inverse"></i>
