--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -36,22 +36,22 @@
   <div role="tabpanel" aria-labelledby="wordCloudTab" class="tab-pane fade" id="wordCloudPanel">
 		<div class="btn-group" data-toggle="buttons-checkbox">
 			<h2>Filter reviews</h2>
-			<button type="button" id="sb1" class="btn btn-default btn-lg">
+			<button type="button" id="sb1" class="btn btn-default btn-md">
 			  	<span class="glyphicon glyphicon-star" aria-hidden="true"></span> 1 Star
 			</button>
-			<button type="button" id="sb2" class="btn btn-default btn-lg">
+			<button type="button" id="sb2" class="btn btn-default btn-md">
 			  	<span class="glyphicon glyphicon-star" aria-hidden="true"></span> 2 Star
 			</button>
-			<button type="button" id="sb3" class="btn btn-default btn-lg">
+			<button type="button" id="sb3" class="btn btn-default btn-md">
 			  	<span class="glyphicon glyphicon-star" aria-hidden="true"></span> 3 Star
 			</button>
-			<button type="button" id="sb4" class="btn btn-default btn-lg">
+			<button type="button" id="sb4" class="btn btn-default btn-md">
 			  	<span class="glyphicon glyphicon-star" aria-hidden="true"></span> 4 Star
 			</button>
-			<button type="button" id="sb5" class="btn btn-default btn-lg">
+			<button type="button" id="sb5" class="btn btn-default btn-md">
 			  	<span class="glyphicon glyphicon-star" aria-hidden="true"></span> 5 Star
 			</button>
-			<button type="submit" id="starSubmit" class="btn btn-default btn-lg"> Submit 
+			<button type="submit" id="starSubmit" class="btn btn-default btn-md"> Submit 
 			</button>
 		</div>
 		<div class="cloudParams">
