--- a/app/views/reviews/welcome.html.erb
+++ b/app/views/reviews/welcome.html.erb
@@ -1,6 +1,6 @@
 <div class="welcomeBox">
 	<h1>Willkommen. Aloha. Bonjour. Sup. </h1>
-	<h2>Soon you'll be scraping reader reviews from Goodreads and Amazon like a "pro" or even "BAMF" (as the youths say) and performing all kinds of funky analysis, like these:</h2><br>
+	<h2>Soon you'll be scraping reader reviews from Goodreads and Amazon like a pro and performing all kinds of funky analysis, like these:</h2>
 	<ul>
 		<li><h4>Schweet Word Clouds</h4></li>
 		<li><h4>Mindblowing keyword extraction</h4></li>
