--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -4,11 +4,11 @@
                 <img src="<%=@img%>">
               <%end%>
             </div>
-            <div class="bookDescription">
+<!--             <div class="bookDescription">
               <p><%=@title%></p>
               <p><%=@pub%></p>
               <p><%=@date%></p>
-            </div>
+            </div> -->
         </div>
   <div role="tabpanel">
       <!-- Nav tabs -->
