--- a/app/views/reviews/_results.html.erb
+++ b/app/views/reviews/_results.html.erb
@@ -1,37 +1,28 @@
-<%10.times do |number| %>
-		<% if @returned_books[number]["volumeInfo"]["printType"] == "BOOK" && @returned_books[number]["volumeInfo"]["industryIdentifiers"] && @returned_books[number]["volumeInfo"]["authors"]%>
+<%@json["GoodreadsResponse"]["search"]["results_end"].to_i.times do |number| %>
 			<div class="single_result">
 				<div class="cover_result">
-					<% if @returned_books[number]["volumeInfo"]["imageLinks"]%>
-							<img src="<%=@returned_books[number]["volumeInfo"]["imageLinks"]["smallThumbnail"]%>">
-						<% else%>
-							<img><span>No Image</span></img>
-					<% end %>
+					<img src="<%=@returned_books[number]["best_book"]["image_url"]%>">
 				</div>
-				<div class="description_result">
-					<p><strong>Title: </strong><%="#{@returned_books[number]["volumeInfo"]["title"]}" %></p>
-						<% @returned_books[number]["volumeInfo"]["authors"].each do |this|%>
-							<p>
-								<strong>Author: </strong><%="#{this}" %>
-							</p>
-						<%end%>
-					<p><strong>Publisher: </strong><%="#{@returned_books[number]["volumeInfo"]["publisher"]}" %></p>
-					<p><strong>Publish Date: </strong><%="#{@returned_books[number]["volumeInfo"]["publishedDate"]}" %></p>
-					
-					<% @returned_books[number]["volumeInfo"]["industryIdentifiers"].each do |this|%>
-						<% if this["type"] == "ISBN_10"%>
-							<p>
-							<%= button_to "Get Reviews", reviews_path, :method => "post", :params => {
-							:choice => "#{this["identifier"]}",
-							:img => "#{@returned_books[number]["volumeInfo"]["imageLinks"]["smallThumbnail"]}",
-							:title => "#{@returned_books[number]["volumeInfo"]["title"]}",
-							:pub => "#{@returned_books[number]["volumeInfo"]["publisher"]}",
-							:date => "#{@returned_books[number]["volumeInfo"]["publishedDate"]}"}%> 
-							</p>
-						<% else %>
-						<% end %>
-					<% end %>
-				</div>
+			<div class="description_result">
+				<p>
+					<strong>Title: </strong><%="#{@returned_books[number]["best_book"]["title"]}" %> |  
+					<strong>Author: </strong><%="#{@returned_books[number]["best_book"]["author"]["name"]}" %> 
+				</p>
+				<p>
+					<strong>Reviews: </strong><%="#{@returned_books[number]["text_reviews_count"]}" %> | 
+					<strong>Avg. Rating: </strong><%="#{@returned_books[number]["average_rating"]}" %> | 	
+					<% @pub_date = "#{@returned_books[number]["original_publication_day"]}/#{@returned_books[number]["original_publication_month"]}/#{@returned_books[number]["original_publication_year"]}" %>
+					<strong>Publication Year: </strong><%=@pub_date%>
+
+						<p>
+				<%= button_to "Get Reviews", reviews_path, :method => "post", :params => {
+						:choice => "#{@returned_books[number]["id"]}",
+						:img => "#{@returned_books[number]["best_book"]["image_url"]}",
+						:title =>"#{@returned_books[number]["best_book"]["title"]}" ,
+						:author => "#{@returned_books[number]["best_book"]["author"]["name"]}",
+						:date => "#{@pub_date}"}
+					%> 	
+						</p>
 			</div>
-	<%end%>
+			</div>
 <%end%>
