--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 </head>
 <body>
 <div class="container-fluid">
-          <div class='shareaholic-canvas' data-app='share_buttons' data-app-id='17925372'></div>
+          <div class='shareaholic-canvas' data-image='http://i.imgur.com/CEKHpA5.gif' data-app='share_buttons' data-app-id='17925372'></div>
 		 <div class="header">
       <img class="logo" src="http://i.imgur.com/n0TePKO.png" />
 		    <div class="title">Reader Reviews Dashboard</div>
