--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 <div class="container-fluid">
 
 
-<span class='st_sharethis_large' displayText='ShareThis'></span>
+<span class='st_sharethis_large' displayText='ShareThis'>TEST</span>
 <span class='st_facebook_large' displayText='Facebook'></span>
 <span class='st_twitter_large' displayText='Tweet'></span>
 <span class='st_linkedin_large' displayText='LinkedIn'></span>
