--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,12 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
 
 <script type="text/javascript">var switchTo5x=true;</script>
-<script type="text/javascript" src="https://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "a51cd0bd-6bb2-445d-8927-fc5831e519e4", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
-
+<script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">
+        stLight.options({
+                publisher:'12345',
+        });
+</script>
 </head>
 <body>
 
