--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
 
+<!-- SHARE THIS -->
+
 <script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">
@@ -20,13 +22,26 @@
                 publisher:'12345',
         });
 </script>
+
+<script>
+         stWidget.addEntry({
+                 "service":"sharethis",
+                 "element":document.getElementByClass('button_1'),
+                 "url":"http://sharethis.com",
+                 "title":"sharethis",
+                 "type":"large",
+                 "text":"ShareThis" ,
+                 "image":"http://www.softicons.com/download/internet-icons/social-superheros-icons-by-iconshock/png/256/sharethis_hulk.png",
+                 "summary":"this is description1"
+         });
+</script>
+
+
 </head>
 <body>
-
-
 <div class="container-fluid">
 
-
+<span id="button_1"></span>
 <span class='st_sharethis_large' displayText='ShareThis'>TEST</span>
 <span class='st_facebook_large' displayText='Facebook'></span>
 <span class='st_twitter_large' displayText='Tweet'></span>
