--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 <body>
 <div class="container-fluid">
 
-<span id="button_1"></span>
+<button id="button_1"></button>
 <span class='st_sharethis_large' displayText='ShareThis'>TEST</span>
 <span class='st_facebook_large' displayText='Facebook'></span>
 <span class='st_twitter_large' displayText='Tweet'></span>
