--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 <script>
          stWidget.addEntry({
                  "service":"sharethis",
-                 "element":document.getElementByClass('button_1'),
+                 "element":document.getElementById('button_1'),
                  "url":"http://sharethis.com",
                  "title":"sharethis",
                  "type":"large",
