--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,30 @@
         });
 </script>
 
+<script type="text/javascript">
+//<![CDATA[
+  (function() {
+    var shr = document.createElement('script');
+    shr.setAttribute('data-cfasync', 'false');
+    shr.src = '//dsms0mj1bbhn4.cloudfront.net/assets/pub/shareaholic.js';
+    shr.type = 'text/javascript'; shr.async = 'true';
+    shr.onload = shr.onreadystatechange = function() {
+      var rs = this.readyState;
+      if (rs && rs != 'complete' && rs != 'loaded') return;
+      var site_id = 'a814ccd3f7a22afc56e789dce5749994';
+      try { Shareaholic.init(site_id); } catch (e) {}
+    };
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(shr, s);
+  })();
+//]]>
+</script>
+
 
 </head>
 <body>
 <div class="container-fluid">
-
+<div class='shareaholic-canvas' data-app='share_buttons' data-app-id='17925372'>SHARE SHARE</div>
 <span id="button_1">CLICKCLICK</span>
 		 <div class="header">
       <img class="logo" src="http://i.imgur.com/n0TePKO.png" />
