--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,8 +46,12 @@
 </head>
 <body>
 <div class="container-fluid">
-<div class='shareaholic-canvas' data-app='share_buttons' data-app-id='17925372'>SHARE SHARE</div>
+
+<div class='shareaholic-canvas' data-app='share_buttons' data-app-id="17925372" data-title='Page Title' data-link='http://www.google.com' 
+data-image='https://imgur.com/gallery/52q0CK8' data-summary='Description of the page you are sharing'></div>
+
 <span id="button_1">CLICKCLICK</span>
+
 		 <div class="header">
       <img class="logo" src="http://i.imgur.com/n0TePKO.png" />
 		    <div class="title">Reader Reviews Dashboard</div>
